--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Welcome"
+        android:text="@string/welcome"
         android:textAlignment="center"
         android:textColor="#000"
         android:textSize="22sp" />
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/mapboxBlue"
-        android:text="Start Kawa Map"
+        android:text="@string/start_kawa_map"
         android:layout_marginTop="20dp"
         android:padding="20dp"
         android:textAllCaps="false"
