--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/enter_details"
-        android:textColor="#000"
+        android:textColor="?android:textColorPrimary"
         android:textSize="26sp"
         android:textStyle="bold" />
 
